--- a/javascript/form.html
+++ b/javascript/form.html
@@ -1,32 +1,93 @@
 <!DOCTYPE html>
 <html>
+
 <head>
- <meta charset="utf-8" />
- <link rel="stylesheet" type="text/css" href="style.css">
- <title>JavaScript</title>
- <script src="form_check.js"></script>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>JavaScript</title>
+  <script src="form_check.js"></script>
 </head>
+
 <body>
- <form name="dane_osobowe">
- <table>
- <tr><td>Imię</td><td><input type="text" name="f_imie"><span class="err" id="e_imie"/></td></tr>
- <tr><td>Nazwisko</td><td><input type="text" name="f_nazwisko"><span class="err" id="e_nazwisko"/></td></tr>
- <tr>
- <td>Płeć</td>
- <td>
- <input name="f_plec" value="f_k" checked type="radio"/>kobieta<br/>
- <input name="f_plec" value="f_m" type="radio" />mężczyzna
- </td>
- </tr>
- <tr><td>N. panieńskie</td><td><input type="text" name="f_nazwisko_p"></td></tr>
- <tr><td>E-mail</td><td><input type="text" name="f_email"><span class="err" id="e_email"/></td></tr>
- <tr><td>Kod pocztowy</td><td><input type="text" name="f_kod"><span class="err" id="e_kod"/></td></tr>
- <tr><td>Ulica/Osiedle</td><td><input type="text" name="f_ulica"><span class="err" id="e_ulica"/></td></tr>
- <tr><td>Miasto</td><td><input type="text" name="f_miasto"><span class="err" id="e_miasto"/></td></tr>
- <tr><td>Uwagi</td><td><textarea rows="5" cols="15" name="uwagi"></textarea>
- </td></tr>
- <tr><td colspan="2"><input type="submit" value="Prześlij" onclick="return validate(this.form);"></td></tr>
- </table>
- </form>
+  <table>
+    <tbody>
+      <tr onclick="alterRows(1, this)">
+        <td>Wiersz 1</td>
+      </tr>
+      <tr>
+        <td>Wiersz 2</td>
+      </tr>
+      <tr>
+        <td>Wiersz 3</td>
+      </tr>
+      <tr>
+        <td>Wiersz 4</td>
+      </tr>
+      <tr>
+        <td>Wiersz 5</td>
+      </tr>
+      <tr>
+        <td>Wiersz 6</td>
+      </tr>
+      <tr>
+        <td>Wiersz 7</td>
+      </tr>
+    </tbody>
+  </table>
+  <button onclick="swapRows(this)">Swap</button>
+  <form name="dane_osobowe">
+    <table>
+      <tr>
+        <td>Imię</td>
+        <td><input type="text" name="f_imie"><span class="err" id="e_imie" /></td>
+      </tr>
+      <tr>
+        <td>Nazwisko</td>
+        <td><input type="text" name="f_nazwisko"><span class="err" id="e_nazwisko" /></td>
+      </tr>
+      <tr>
+        <td>Płeć</td>
+        <td>
+          <input name="f_plec" onclick="showElement('NazwiskoPanienskie')" value="f_k" checked type="radio" />kobieta<br />
+          <input name="f_plec" onclick="hideElement('NazwiskoPanienskie')" value="f_m" type="radio" />mężczyzna
+        </td>
+      </tr>
+      <tr>
+        <td>N. panieńskie</td>
+        <td><span id="NazwiskoPanienskie"><input type="text" name="f_nazwisko_p"></span></td>
+      </tr>
+      <tr>
+        <td>E-mail</td>
+        <td><input type="text" name="f_email"><span class="err" id="e_email" /></td>
+      </tr>
+      <tr>
+        <td>Kod pocztowy</td>
+        <td><input type="text" name="f_kod"><span class="err" id="e_kod" /></td>
+      </tr>
+      <tr>
+        <td>Ulica/Osiedle</td>
+        <td><input type="text" name="f_ulica"><span class="err" id="e_ulica" /></td>
+      </tr>
+      <tr>
+        <td>Miasto</td>
+        <td><input type="text" name="f_miasto"><span class="err" id="e_miasto" /></td>
+      </tr>
+      <tr>
+        <td>Uwagi</td>
+        <td>
+          <textarea rows="5" cols="15" name="uwagi" onkeyup="cnt(this.form.uwagi, document.getElementById('zostalo'), 150)"></textarea>
+        </td>
+      </tr>
+      <tr>
+        <td>Pozostało <span id="zostalo">150</span> znaków</td>
+      </tr>
+      </td>
+      </tr>
+      <tr>
+        <td colspan="2"><input type="submit" value="Prześlij" onclick="return validate(this.form);"></td>
+      </tr>
+    </table>
+  </form>
 </body>
+
 </html>
